working touch version

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "description": "labkit remote drawing",
   "dependencies": {
+    "canvas": "^2.5.0",
     "express": "^4.15.2",
     "jquery-mobile": "^1.5.0-alpha.1",
     "node-static": "^0.7.11",
     "pinch-zoom-canvas": "^1.0.4",
+    "probe-image-size": "^4.0.0",
     "socket.io": "^1.7.3"
   },
   "scripts": {
